[gd_scene load_steps=5 format=2]

[ext_resource path="res://LevelPicker.gd" type="Script" id=1]
[ext_resource path="res://buttons/Questionmark_resized.png" type="Texture" id=2]
[ext_resource path="res://background/Playspace_resized.png" type="Texture" id=3]
[ext_resource path="res://background/Sword_Complete.png" type="Texture" id=4]

[node name="LevelPicker" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )

[node name="Level1" type="Button" parent="."]
margin_left = 200.0
margin_top = 250.0
margin_right = 362.0
margin_bottom = 406.0
icon = ExtResource( 2 )
flat = true

[node name="Level2" type="Button" parent="."]
margin_left = 625.0
margin_top = 250.0
margin_right = 787.0
margin_bottom = 406.0
icon = ExtResource( 2 )
flat = true

[node name="Level3" type="Button" parent="."]
margin_left = 1050.0
margin_top = 250.0
margin_right = 1212.0
margin_bottom = 406.0
icon = ExtResource( 2 )
flat = true

[node name="Level4" type="Button" parent="."]
margin_left = 200.0
margin_top = 650.0
margin_right = 362.0
margin_bottom = 806.0
icon = ExtResource( 2 )
flat = true

[node name="Level5" type="Button" parent="."]
margin_left = 625.0
margin_top = 650.0
margin_right = 787.0
margin_bottom = 806.0
icon = ExtResource( 2 )
flat = true

[node name="Level6" type="Button" parent="."]
margin_left = 1050.0
margin_top = 650.0
margin_right = 1212.0
margin_bottom = 806.0
icon = ExtResource( 2 )
flat = true

[node name="sword" type="Sprite" parent="."]
visible = false
position = Vector2( 1550, 334 )
scale = Vector2( 0.5, 0.35 )
texture = ExtResource( 4 )

[node name="sword_hidden" type="Sprite" parent="."]
position = Vector2( 1550, 325 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1544, 725 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[connection signal="pressed" from="Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="Level3" to="." method="_on_Level3_pressed"]
[connection signal="pressed" from="Level4" to="." method="_on_Level4_pressed"]
[connection signal="pressed" from="Level5" to="." method="_on_Level5_pressed"]
[connection signal="pressed" from="Level6" to="." method="_on_Level6_pressed"]
